# ToyBricks

./: CMakeLists.txt  test_candidate_elimination.cpp  test_container.cpp  test_decision_tree.cpp  test_linear_regression.cpp  test_logistic_regression.cpp  test_math.cpp  todo.txt
common/: defines.h  functor.h  type_base.h
container/: adjacency_list.h  algorithm.h  avl_tree.h  bidirectional_list.h  graph.h  hash_map.h  hash_set.h  hashtable.h  heap.h  iterator.h  matrix.h  memory.h  pair.h  queue.h  rb_tree.h  sequence.h  single_list.h  stack.h  tree_base.h  type_base.h  unidirectional_list.h
example/: test_candidate_elimination.cpp  test_decision_tree.cpp  test_linear_regression.cpp  test_logistic_regression.cpp
math/: math_base.h  math_common.h  math_io.h  math_type.h  matrix.h  matrix_algo.h  vector.h  vector2.h  vector3.h  vector4.h  vector_algo.h  vector_function.h  vector_io.h  vector_operation.h  vector_operator.h  vector_traits.h
ml/: base.h  candidate_elimination.h  decision_tree.h  optimizer.h  tensor.h  trainer.h
